--- a/src/app/pages/wallet-page/wallet-page.component.css
+++ b/src/app/pages/wallet-page/wallet-page.component.css
@@ -1,8 +1,12 @@
-
  .container {
+  margin: 24px;
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    min-height: 300px;
+   width: 100%;
  }
+
+ 
