--- a/src/app/pages/wallet-page/wallet-page.component.css
+++ b/src/app/pages/wallet-page/wallet-page.component.css
@@ -1,5 +1,5 @@
  .container {
-  margin: 24px;
+  padding: 24px;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -9,4 +9,9 @@
    width: 100%;
  }
 
+ .balance{
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 24px;
+ }
  
