bugs and formating

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -31,7 +31,8 @@
     </div>
     <div class="manu-nav-container mid align-self-start  col-4 ">
 
-        <button type="button" title="add" [disabled]="this.disableAddButton" mat-fab class="p-2" (click)="AddEvent()">
+        <button type="button" title="add" [disabled]="this.disableAddButton" mat-fab class="p-2" (click)="AddEvent()"
+            [matTooltip]="Tooltip">
             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="60" height="60" rx="30" fill="#FFD65F" />
                 <rect width="60" height="60" rx="30" fill="#FFD65F" />
