--- a/src/app/pages/payment-page/payment-page.component.html
+++ b/src/app/pages/payment-page/payment-page.component.html
@@ -7,7 +7,7 @@
 
     </div>
     <div class="  ">
-        <app-navigation-bar (onAddEvent)="AddNewCard()" [disableAddButton]="NewCardStete"></app-navigation-bar>
+        <app-navigation-bar (onAddEvent)="AddNewCard()" [disableAddButton]="NewCardStete" Tooltip="Add new Card"></app-navigation-bar>
 
     </div>
 </div>
