--- a/src/app/components/add-credit-card/add-credit-card.component.html
+++ b/src/app/components/add-credit-card/add-credit-card.component.html
@@ -11,7 +11,7 @@
         <div class="side-by-side ">
             <mat-form-field class="full-width">
                 <mat-label>Card Number</mat-label>
-                <input id="cc-number" type="tel" autocomplete="cc-number" ccNumber matInput placeholder="Card Number"
+                <input id="cc-number" type="tel" autocomplete="cc-number" ccNumber matInput placeholder="0000 0000 0000 0000"
                     formControlName="cardNumberCtrl" required>
             </mat-form-field>
         </div>
@@ -20,12 +20,12 @@
             <mat-form-field class="half-width ">
                 <mat-label>Expiration Date</mat-label>
                 <input id="cc-exp-date" type="tel" autocomplete="cc-exp" ccExp matInput
-                    placeholder="Expiration Date MM/YY" formControlName="expirationDateCtrl" required expDateMask>
+                    placeholder="mm/yy" formControlName="expirationDateCtrl" required expDateMask>
             </mat-form-field>
 
             <mat-form-field class=" half-width  ">
                 <mat-label>CCV Number</mat-label>
-                <input id="cc-cvc" type="tel" autocomplete="off" ccCvc matInput placeholder="CVV Number"
+                <input id="cc-cvc" type="tel" autocomplete="off" ccCvc matInput placeholder="***"
                     formControlName="ccvCtrl" required>
             </mat-form-field>
         </div>
@@ -33,13 +33,13 @@
         <div class="side-by-side">
             <mat-form-field class="large-width">
                 <mat-label>Card Holder</mat-label>
-                <input type="tel" autocomplete="name" matInput placeholder="Card Holder"
+                <input type="tel" autocomplete="name" matInput placeholder="e.g.John Doe"
                     formControlName="cardHolderCtrl" required>
             </mat-form-field>
 
             <mat-form-field class="small-width">
                 <mat-label>Card Holder ZIP</mat-label>
-                <input type="tel" autocomplete="postal-code" matInput placeholder=" Card Holder ZIP code"
+                <input type="tel" autocomplete="postal-code" matInput placeholder="e.g.12345"
                     formControlName="cardHolderZIP" required>
             </mat-form-field>
         </div>
