--- a/src/styles.css
+++ b/src/styles.css
@@ -249,3 +249,12 @@ div.app-background {
     width: 100%;
     height: 100%;
 }
+
+.warning-button   {
+    background-color: var(--bs-warning-bg-subtle);
+    color: var(--bs-warning );
+    border: 1px solid var(--bs-warning );
+    border-radius: 0.25rem;
+    font: var(--bs-warning-text-emphasis);
+    transition: background-color 0.3s;
+}
