--- a/src/app/components/user-header/user-header.component.html
+++ b/src/app/components/user-header/user-header.component.html
@@ -15,6 +15,8 @@
                 <button mat-menu-item disabled>User image</button>
                 <mat-divider></mat-divider>
                 <button mat-menu-item (click)="Logout()">Logout</button>
+                <mat-divider></mat-divider>
+                <button mat-menu-item (click)="About()">About</button>
             </mat-menu>
 
         </div>
